--- a/myclouds-admin-web/src/main/resources/templates/fragments/common.html
+++ b/myclouds-admin-web/src/main/resources/templates/fragments/common.html
@@ -58,24 +58,32 @@
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
-				<h3 class="modal-title">系统错误 <small>请和管理员联系</small></h3>
+				<h3 class="modal-title">
+					系统错误 <small>请和管理员联系</small>
+				</h3>
 			</div>
 			<div class="modal-body">
 				<form id="fo-global-error" class="form-horizontal">
 					<div class="form-group">
 						<label class="col-md-2 control-label">请求路径：</label>
 						<div class="col-md-6 field">
-							<p class="form-control-static" id="id-error-path"><span class="label label-rounded label-danger"></span></p>
+							<p class="form-control-static" id="id-error-path">
+								<span class="label label-rounded label-danger"></span>
+							</p>
 						</div>
 						<label class="col-md-2 control-label">HTTP响应码：</label>
 						<div class="col-md-2 field">
-							<p class="form-control-static" id="id-error-status"><span class="label label-rounded label-danger"></span></p>
+							<p class="form-control-static" id="id-error-status">
+								<span class="label label-rounded label-danger"></span>
+							</p>
 						</div>
 					</div>
 					<div class="form-group">
 						<label class="col-md-2 control-label">异常类：</label>
 						<div class="col-md-10 field">
-							<p class="form-control-static text-danger" id="id-error-exception"><span class="label label-rounded label-danger"></span></p>
+							<p class="form-control-static text-danger" id="id-error-exception">
+								<span class="label label-rounded label-danger"></span>
+							</p>
 						</div>
 					</div>
 					<div class="form-group">
@@ -102,7 +110,7 @@
 <script type="text/javascript">
 	//注销
 	function fnLogout() {
-		My.confirm('确认安全退出系统吗？','small', function(result) {
+		My.confirm('确认安全退出系统吗？', 'small', function(result) {
 			if (result) {
 				$.ajax({
 					type : 'post',
@@ -128,7 +136,7 @@
 			success : function(data) {
 				if (data.code == '1') {
 					$('#w-pwd').modal('hide');
-					My.confirm('密码修改成功，需要退出并重新登录吗？', null, function(result) {
+					My.confirm('密码修改成功，尝试重新登录吗？', 'small', function(result) {
 						if (result) {
 							$.ajax({
 								type : 'post',
@@ -192,7 +200,7 @@
 <script type="text/javascript">
 	$(function() {
 		//统一异常拦截器
-		$(document).ajaxError(function(e,data) {
+		$(document).ajaxError(function(e, data) {
 			data = data.responseJSON;
 			$('#w-global-error').modal();
 			$('#id-error-path span').text(data.path);
@@ -201,12 +209,25 @@
 			$('#id-error-message').css('overflow-x', 'hidden');
 			$('#id-error-message').text(data.message);
 		});
-		
+
 		//确保所有最后一个弹出窗口在最顶层显示
-        $(document).on('show.bs.modal', '.modal', function (event) {
-            var zIndex = 1040 + (10 * $('.modal:visible').length);
-            $(this).css('z-index', zIndex);
-        });
+		$(document).on('show.bs.modal', '.modal', function(event) {
+			var zIndex = 1040 + (10 * $('.modal:visible').length);
+			$(this).css('z-index', zIndex);
+		});
+
+		//显示系统时钟
+		var myTimeFlag = 0;
+		setInterval(
+				function(){
+					var tip = new Date().toLocaleString()+' 星期'+'日一二三四五六'.charAt(new Date().getDay());
+					if(myTimeFlag == 0){
+						tip = '<div class="animated fadeIn">' +tip + '</div>';
+					}
+					$('#id-mytime').html(tip);
+					myTimeFlag = 1;
+				},1000);
+		
 	});
 </script>
 <!-- End: Script -->
