no commit message

--- a/myclouds-admin-web/src/main/resources/templates/modules/sys/enums.html
+++ b/myclouds-admin-web/src/main/resources/templates/modules/sys/enums.html
@@ -373,7 +373,7 @@
 										case '1':
 											return '是';
 										default:
-											return row.type
+											return row.is_enable
 										}
 									},
 									width : 60
