--- a/myclouds-admin-web/src/main/resources/templates/modules/sys/org.html
+++ b/myclouds-admin-web/src/main/resources/templates/modules/sys/org.html
@@ -28,7 +28,7 @@
 			<section id="content" class="table-layout animated fadeIn">
 
 				<!-- begin: .tray-left -->
-				<aside class="tray tray-left tray350 pt25">
+				<aside class="tray tray-left tray320 pt25">
 					<div class="panel">
 						<div class="panel-heading">
 							<span class="panel-title">组织机构部门导航</span>
@@ -477,7 +477,7 @@
 				url : 'get',
 				data : row,
 				success : function(data) {
-					data.parent_name = row.parent_name;
+					data.parent_name = row.parent_name == null ? "无" : row.parent_name;
 					$('#w-update').modal();
 					$("#fo-update")[0].reset();
 					$("#fo-update").setForm(data);
