no commit message

--- a/myclouds-admin-web/src/main/resources/templates/modules/sys/enums.html
+++ b/myclouds-admin-web/src/main/resources/templates/modules/sys/enums.html
@@ -545,8 +545,7 @@
 
 		//缓存同步
 		function syncCache() {
-			My
-					.confirm(
+			My.confirm(
 							'<span class="text-danger">请知晓当前操作的必要性和重要性再继续。确认批量同步缓存吗？</span><hr class="mv10 br-lighter"><span class="label label-xs label-info p2"><i class="fa fa-meh-o"></i> 提示</span> 页面上的维护操作，数据已自动同步缓存。',
 							null,
 							function(result) {
