--- a/myclouds-admin-webserver/src/main/resources/templates/modules/sys/param.html
+++ b/myclouds-admin-webserver/src/main/resources/templates/modules/sys/param.html
@@ -108,7 +108,7 @@
 
 				<!-- 新增参数窗口 -->
 				<div class="modal fade" id="w-new" tabindex="-1" data-backdrop="static">
-					<div class="modal-dialog w450">
+					<div class="modal-dialog w500">
 						<div class="modal-content">
 							<div class="modal-header">
 								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -141,7 +141,7 @@
 									<div class="form-group">
 										<label class="col-md-3 control-label required">参数值：</label>
 										<div class="col-md-9 field">
-											<input name="value" class="form-control" type="text" />
+											<textarea name="value" class="form-control" rows="4"></textarea>
 										</div>
 									</div>
 									<div class="form-group">
@@ -165,7 +165,7 @@
 
 				<!-- 修改参数窗口 -->
 				<div class="modal fade" id="w-update" tabindex="-1" data-backdrop="static">
-					<div class="modal-dialog w450">
+					<div class="modal-dialog w500">
 						<div class="modal-content">
 							<div class="modal-header">
 								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -199,7 +199,7 @@
 									<div class="form-group">
 										<label class="col-md-3 control-label required">参数值：</label>
 										<div class="col-md-9 field">
-											<input name="value" class="form-control" type="text" />
+											<textarea name="value" class="form-control" rows="4"></textarea>
 										</div>
 									</div>
 									<div class="form-group">
@@ -295,7 +295,10 @@
 											width : 150
 										},
 										{
-											data : "value"
+											data : "value",
+											render : function(data, type, row, meta){
+												return data.length > 35 ? data.substr( 0, 35 )+'...' : data;
+											}
 										},
 										{
 											data : "type",
