--- a/myclouds-admin-webserver/src/main/resources/templates/modules/sys/param.html
+++ b/myclouds-admin-webserver/src/main/resources/templates/modules/sys/param.html
@@ -252,9 +252,15 @@
 				$("#fo-new")[0].reset();
 			});
 			$("#btn-refresh").on("click", fnQuery);
-			$('#dt-param tbody').on('click', 'tr', function() {
-				$(this).toggleClass('selected');
-			});
+            $('#dt-param tbody').on('click', 'tr', function() {
+                if ($(this).hasClass('selected')) {
+                          $(this).removeClass('selected');
+                } else {
+                          var table = $('#dt-param').DataTable();
+                          table.$('tr.selected').removeClass('selected');
+                          $(this).addClass('selected');
+                }
+             });
 			$('#dt-param tbody').on('dblclick', 'tr', function() {
 				fnShowUpdate($('#dt-param').DataTable().row(this).data());
 			});
