--- a/myclouds-admin-webserver/src/main/resources/templates/modules/sys/module.html
+++ b/myclouds-admin-webserver/src/main/resources/templates/modules/sys/module.html
@@ -317,9 +317,15 @@
 			$("#btn-sync").on("click", syncCache);
 			$("#btn-t-refresh").on("click", fnRefresh);
 			$("#btn-t-expand").on("click", fnToggleTree);
-			$('#dt-module tbody').on('click', 'tr', function() {
-				$(this).toggleClass('selected');
-			});
+            $('#dt-module tbody').on('click', 'tr', function() {
+                if ($(this).hasClass('selected')) {
+                          $(this).removeClass('selected');
+                } else {
+                          var table = $('#dt-module').DataTable();
+                          table.$('tr.selected').removeClass('selected');
+                          $(this).addClass('selected');
+                }
+             });
 			$('#dt-module tbody').on('dblclick', 'tr', function() {
 				fnShowUpdate($('#dt-module').DataTable().row(this).data());
 			});
