--- a/myclouds-admin-webserver/src/main/resources/templates/modules/sys/user.html
+++ b/myclouds-admin-webserver/src/main/resources/templates/modules/sys/user.html
@@ -416,9 +416,15 @@
 			$("#btn-t-refresh").on("click", fnRefresh);
 			$("#btn-reset").on("click", fnOpenReset);
 			$("#btn-t-expand").on("click", fnToggleTree);
-			$('#dt-user tbody').on('click', 'tr', function() {
-				$(this).toggleClass('selected');
-			});
+            $('#dt-user tbody').on('click', 'tr', function() {
+                if ($(this).hasClass('selected')) {
+                          $(this).removeClass('selected');
+                } else {
+                          var table = $('#dt-user').DataTable();
+                          table.$('tr.selected').removeClass('selected');
+                          $(this).addClass('selected');
+                }
+             });
 			$('#dt-user tbody').on('dblclick', 'tr', function() {
 				fnShowUpdate($('#dt-user').DataTable().row(this).data());
 			});
