1. [优化]优化了系统管理相关模块表格行多选高亮显示逻辑。 2. [新增]引入了nicescroll.js，对现有模块进行了完善，提升了页面滚动条的显示效果和交互体验。 3. [修复]修复了页面进入全屏模式后滚动条显示bug。

--- a/myclouds-admin-webserver/src/main/resources/templates/modules/sys/org.html
+++ b/myclouds-admin-webserver/src/main/resources/templates/modules/sys/org.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="/theme/vendor/plugins/ztree/css/zTreeStyle.css" />
 </head>
 
-<body class="sb-l-o">
+<body class="sb-l-o nano">
 	<!--/* 公共代码 */-->
 	<div th:replace="fragments/common"></div>
 	
