--- a/myclouds-admin-webserver/src/main/resources/templates/modules/sys/param.html
+++ b/myclouds-admin-webserver/src/main/resources/templates/modules/sys/param.html
@@ -5,7 +5,7 @@
 <th:block th:replace="fragments/head" />
 </head>
 
-<body class="sb-l-o">
+<body class="sb-l-o nano">
 	<!--/* 公共代码 */-->
 	<div th:replace="fragments/common"></div>
 	
@@ -227,7 +227,6 @@
 
 			<!--/* 页脚 */-->
 			<footer th:replace="fragments/footer"></footer>
-
 		</section>
 		<!-- End: Content-Wrapper -->
 
@@ -236,7 +235,6 @@
 
 	<!--/* 公共脚本文件 */-->
 	<th:block th:include="fragments/scripts" />
-
 	<script th:inline="javascript">
 		/*<![CDATA[*/
 		$(function() {
