--- a/myclouds-admin-webserver/src/main/resources/templates/fragments/scripts.html
+++ b/myclouds-admin-webserver/src/main/resources/templates/fragments/scripts.html
@@ -13,6 +13,7 @@
 	<script src="/theme/vendor/plugins/moment/moment.min.js"></script>
 	<script src="/theme/vendor/plugins/datepicker/js/bootstrap-datetimepicker.js"></script>
 	<script src="/theme/vendor/plugins/daterange/daterangepicker.js"></script>
+	<script src="/theme/vendor/plugins/nicescroll/jquery.nicescroll.min.js"></script>
 	<script src="/js/md5.js"></script>
 	<script src="/js/myclouds.js"></script>
 	<!-- END: PAGE SCRIPTS -->
