--- a/myclouds-admin-webserver/src/main/resources/templates/modules/sys/user.html
+++ b/myclouds-admin-webserver/src/main/resources/templates/modules/sys/user.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="/theme/vendor/plugins/ztree/css/zTreeStyle.css" />
 </head>
 
-<body class="sb-l-o">
+<body class="sb-l-o nano">
 	<!--/* 公共代码 */-->
 	<div th:replace="fragments/common"></div>
 	
